tests/should_fail/diagnostics/index_unimplemented.stderr
error[E0599]: no method named `index_logic` found for struct `S` in the current scope
  --> index_unimplemented.rs:10:13
   |
 5 | struct S;
   | -------- method `index_logic` not found for this struct
...
10 |     let _ = x[0];
   |             ^^^^ method not found in `S`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `index_logic`, perhaps you need to implement it:
           candidate #1: `creusot_contracts::logic::ops::IndexLogic`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
